fix: z-index for header menu

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,7 +1,7 @@
 .container {
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 20;
 }
 
 .container_menu {
